src/test/resources/SemanticAnalysis/negative/SameChildName.ls
class A {
  p("${a : A}${a : A}") {}
}
